# HTM-Modular-HS

./: .ghc.environment.x86_64-linux-8.6.2  .gitignore  CHANGELOG.md  ChangeLog.md  Collumn.hs  HTM-Modular-HS.cabal  HTM.cabal  LICENSE  LICENSE.save0  Main.hs  README.md  package-lock.json  package.json
.circleci/: config.yml
.stack-work/install/x86_64-linux-tinfo6/lts-9.21/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  (+5 more)
Collumn/: Collumn.hi  Collumn.hs
Documentation/: Collumn.html  LICENSEHEADER  build.sh  doc-index.html  index.html  mini_Collumn.html
Layer/: Layer.hi  Layer.hs
Lib/: Quicksort.hi  Quicksort.hs  Remove_Duplicates.hi  Remove_Duplicates.hs
SDR/: SDR.hi  SDR.hs
Tests/: CollumnSpec.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.2/: HTM-0.1.0.0-inplace.conf  package.cache
project/src/: Main.hs
src/: Collumn.hs  Connection.js  IdentityLayer.hs  Layer.js  SDR.hs  SDR.hs~  SDR.js  SDR_test.hs  SDR_test.hs~  Test.hs  auto_test.sh  main.hs  tests.hs  tests.hs~
src/Collumn/: Collumn.hs
test/: Connection.test.js  Layer.test.js  README.md  SDR.test.js
