cabal-version: 1.12

name:           HTM
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/CSDUMMI/HTM#readme>
homepage:       https://github.com/CSDUMMI/HTM#readme
bug-reports:    https://github.com/CSDUMMI/HTM/issues
author:         Joris Gutjahr
maintainer:     joris.gutjahr@gmail.com
copyright:      (c) Joris Gutjahr 2018
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/CSDUMMI/HTM

library
  exposed-modules:
      Lib
  other-modules:
      Paths_HTM
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable HTM-exe
  main-is: Main.hs
  other-modules:
      Paths_HTM
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HTM
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite HTM-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_HTM
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HTM
    , base >=4.7 && <5
  default-language: Haskell2010
